DBZ-8346 Use DebeziumSinkRecord instead of Kafka Connect's SinkRecord inside Debezium sink connectors - pt.1 Refactor TableId to CollectionId and related classes/variable name changes and refactoring, introduce debezium-sink package